--- a/styles/video.css
+++ b/styles/video.css
@@ -37,11 +37,14 @@
     font-size: 12px;
     color: rgb(96, 96, 96);
     text-decoration: none;
+    display: flex;
+    flex-direction: row;
 }
 
 .video-author{
     margin-bottom: 4px;
 }
+
 
 .video-grid{
     
